<resources>
    <string name="app_name">World of Airports</string>

    <!--Main activity strings-->
    <string name="main_activity_search_input_latitude">latitude (in decimal degrees)</string>
    <string name="main_activity_search_input_longitude">longitude (in decimal degrees)</string>
    <string name="main_activity_search_input_radius">radius (in kilometers)</string>
    <string name="main_activity_search_button">search</string>
    <string name="main_activity_search_no_search_result">No airports found in the given radius!</string>
    <string name="main_activity_search_result_list_row_name">Name:</string>
    <string name="main_activity_search_result_list_row_latitude">Lat.:</string>
    <string name="main_activity_search_result_list_row_longitude">Lon.:</string>
    <string name="main_activity_search_result_list_row_distance">Dist. (km):</string>

    <!--No network layout strings (Main activity)-->
    <string name="no_internet">No Internet connection. Make sure that Wi-Fi or cellular mobile data is turned on, then come back.</string>
    <string name="exit_button_text">EXIT</string>

</resources>
