<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSearchBackground"
        tools:context=".activity.MainActivity">

        <EditText
            android:id="@+id/latitude_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:backgroundTint="@color/colorPrimary"
            android:ems="12"
            android:fontFamily="sans-serif-thin"
            android:hint="@string/main_activity_search_input_latitude"
            android:inputType="numberSigned|numberDecimal"
            android:maxLength="7"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textCursorDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/longitude_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:backgroundTint="@color/colorPrimary"
            android:ems="12"
            android:fontFamily="sans-serif-thin"
            android:hint="@string/main_activity_search_input_longitude"
            android:inputType="numberSigned|numberDecimal"
            android:maxLength="7"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textCursorDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/latitude_input" />

        <EditText
            android:id="@+id/radius_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:backgroundTint="@color/colorPrimary"
            android:ems="12"
            android:fontFamily="sans-serif-thin"
            android:hint="@string/main_activity_search_input_radius"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="5"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textCursorDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/longitude_input" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/colorPrimary"
            android:fontFamily="sans-serif"
            android:shadowColor="@color/colorPrimaryDark"
            android:text="@string/main_activity_search_button"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radius_input" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent">

        <ProgressBar
            android:id="@+id/main_activity_progress_bar"
            style="@android:style/Widget.Holo.ProgressBar.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/main_activity_recycler_view_search_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/main_activity_no_search_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/main_activity_search_no_search_result"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>